fix slider ticks visibility inside of a modal

--- a/src/themes/theme-new-dark.scss
+++ b/src/themes/theme-new-dark.scss
@@ -535,7 +535,7 @@ $pager-hover-color: $font-color-extrahighcontrast;
 $pager-disabled-color: $ids-color-palette-slate-60;
 
 // Slider
-$slider-bg-color: $ids-color-palette-slate-80;
+$slider-bg-color: $ids-color-palette-slate-50;
 $slider-active-bg-color: $ids-color-brand-primary-base;
 $slider-labels-color: $ids-color-palette-slate-30;
 $slider-disabled-color: $ids-color-palette-slate-60;
